# gxib

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  release.toml
.github/workflows/: docker-publish.yml
.gxi/: web.js  web_bg.wasm
examples/desktop/: Cargo.toml
examples/desktop/src/: main.rs
examples/web/: Cargo.toml
examples/web/src/: app.rs  asd  main.rs
src/: macros.rs  main.rs  version.rs
src/cli/: args.rs  cli_interface.rs  desktop_args.rs  mod.rs  web_args.rs  web_cmd.rs
src/pipelines/: mod.rs
src/pipelines/desktop/: README.md  desktop_pipeline.rs  mod.rs
src/pipelines/web/: README.md  mod.rs  web_pipeline.rs  ws_actor.rs
src/pipelines/web/server/: mod.rs  server.rs  ws.rs  ws_actor.rs
src/utils/: exec.rs  hash.rs  mod.rs  toml_parser.rs  watcher.rs
tests/: Makefile
tests/desktop/: Cargo.toml
tests/web/: Cargo.toml
