[package]
name = "gxib"
version = "0.2.3"
authors = ["aniketfuryrocks <contact@aniketprajapati.me>"]
edition = "2018"
description = "build tool for the gxi-rs project"
repository = "https://github.com/gxi-rs/gxib.git"
license = "MIT"
keywords = ["gxi-rs", "build-tool"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "web-programming",
]

[workspace]
members = ["examples/web", "examples/desktop"]

[dependencies]
clap = { version = "3.0.0-rc.4", features = ["derive", "cargo"] }
notify = "5.0.0-pre.13"
anyhow = "1.0.51"
seahash = "4.1.0"
path-absolutize = "3.0.11"
futures = "0.3.18"
actix-web = "4.0.0-beta.14"
actix-web-actors = "4.0.0-beta.8"
actix-files = "0.6.0-beta.10"
actix = "0.12.0"
simplelog = "0.11.1"
log = "0.4.14"
cargo_metadata = "0.14.1"

[dependencies.tokio]
version = "1.14.0"
features = ["full", "process"]
