[package]
name = "gxib"
version = "0.3.7"
authors = ["aniketfuryrocks <contact@aniketprajapati.me>"]
edition = "2021"
description = "build tool for the gxi-rs project"
repository = "https://github.com/gxi-rs/gxib.git"
license = "MIT"
keywords = ["gxi-rs", "build-tool"]
categories = [
  "command-line-utilities",
  "development-tools::build-utils",
  "web-programming",
]

[workspace]
members = ["examples/web", "examples/desktop"]

[dependencies]
clap = { version = "3.1.8", features = ["derive", "cargo"] }
notify = "5.0.0-pre.14"
anyhow = "1.0.56"
seahash = "4.1.0"
path-absolutize = "3.0.13"
actix-web = "4.0.1"
actix-web-actors = "4.1.0"
actix-files = "0.6.0"
actix = "0.13.0"
simplelog = "0.12.0"
log = "0.4.16"
cargo_metadata = "0.15.0"
tokio = { version = "1.17.0", features = ["full"] }
